Automatically backed up by Learn

--- a/bear.html
+++ b/bear.html
@@ -8,6 +8,10 @@
 <body>
   <div id="bear">
     <img src="images/bear.png" alt="Careless Bear">
+
+    media screen and (max-width: 800px) {
+    }
+    body
   </div>
 </body>
 </html>
