--- a/ostrich.html
+++ b/ostrich.html
@@ -8,6 +8,9 @@
 <body>
   <div id="ostrich">
     <img src="images/ostrich.png" alt="Clumzy Ostrich">
+  .wrapper {
+    width: 90%
+    }
   </div>
 </body>
 </html>
