--- a/monkey.html
+++ b/monkey.html
@@ -8,6 +8,12 @@
 <body>
   <div id="monkey">
     <img src="images/monkey.png" alt="Mischief Monkey">
+    .wrapper {
+      width: 1170px
+      @media only screen and (min-width: 1170px) {
+        .wrapper {width: 1170px;}
+      }
+    
   </div>
 </body>
 </html>
